--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,18 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "3.2.3",
+    "com.unity.2d.animation": "3.2.5",
     "com.unity.2d.ik": "2.0.2-preview.1",
-    "com.unity.2d.psdimporter": "2.1.4",
+    "com.unity.2d.psdimporter": "2.1.6",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#master",
-    "com.unity.cinemachine": "2.6.0",
+    "com.unity.2d.tilemap.extras": "1.6.2-preview",
+    "com.unity.cinemachine": "2.6.3",
     "com.unity.inputsystem": "1.0.0",
-    "com.unity.render-pipelines.universal": "7.4.1",
-    "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.render-pipelines.universal": "7.5.1",
+    "com.unity.test-framework": "1.1.18",
+    "com.unity.textmeshpro": "2.1.3",
     "com.unity.ugui": "1.0.0",
-    "net.slothsoft.unity-extensions": "https://github.com/Faulo/UnityExtensions.git#0.1.13",
+    "net.slothsoft.unity-extensions": "https://github.com/Faulo/UnityExtensions.git#0.1.17",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.director": "1.0.0",
