--- a/.editorconfig
+++ b/.editorconfig
@@ -56,7 +56,7 @@ dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
 dotnet_style_prefer_simplified_interpolation = true:warning
 
 # Einstellungen für Felder
-dotnet_style_readonly_field = yes:warning
+dotnet_style_readonly_field = false:warning
 
 # Einstellungen für Parameter
 dotnet_code_quality_unused_parameters = all:warning
