--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,19 +9,19 @@
     }
   ],
   "dependencies": {
-    "com.unity.2d.animation": "5.2.6",
-    "com.unity.2d.psdimporter": "4.3.1",
+    "com.unity.2d.animation": "7.1.0",
+    "com.unity.2d.psdimporter": "6.0.9",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "1.8.4-preview",
-    "com.unity.cinemachine": "2.6.17",
-    "com.unity.ide.visualstudio": "2.0.17",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.render-pipelines.universal": "10.10.1",
+    "com.unity.2d.tilemap.extras": "2.2.7",
+    "com.unity.cinemachine": "2.8.9",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "12.1.14",
     "com.unity.test-framework": "2.0.1-exp.2",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.textmeshpro": "3.0.7",
     "com.unity.ugui": "1.0.0",
-    "net.slothsoft.unity-extensions": "2.3.0",
+    "net.slothsoft.unity-extensions": "3.1.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.director": "1.0.0",
