--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,4 @@
 {
-  "scopedRegistries": [
-    {
-      "name": "OpenUPM",
-      "url": "https://package.openupm.com",
-      "scopes": [
-        "net.slothsoft.unity-extensions"
-      ]
-    }
-  ],
   "dependencies": {
     "com.unity.2d.animation": "7.1.0",
     "com.unity.2d.psdimporter": "6.0.9",
@@ -17,11 +8,6 @@
     "com.unity.cinemachine": "2.8.9",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.render-pipelines.universal": "12.1.14",
-    "com.unity.test-framework": "2.0.1-exp.2",
-    "com.unity.textmeshpro": "3.0.7",
-    "com.unity.ugui": "1.0.0",
-    "net.slothsoft.unity-extensions": "3.1.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.director": "1.0.0",
@@ -34,6 +20,30 @@
     "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.ui": "1.0.0",
     "com.unity.modules.uielements": "1.0.0",
-    "com.unity.modules.umbra": "1.0.0"
-  }
+    "com.unity.modules.umbra": "1.0.0",
+    "com.unity.render-pipelines.universal": "12.1.14",
+    "com.unity.textmeshpro": "3.0.7",
+    "com.unity.ugui": "1.0.0",
+    "net.slothsoft.unity-extensions": "3.1.0"
+  },
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.domybest.mybox",
+        "net.slothsoft.unity-extensions",
+        "com.inkle.ink-unity-integration",
+        "nl.jeffreylanters.tweens",
+        "net.tnrd.nsubstitute"
+      ]
+    },
+    {
+      "name": "Unity NuGet",
+      "url": "https://unitynuget-registry.azurewebsites.net",
+      "scopes": [
+        "org.nuget"
+      ]
+    }
+  ]
 }
