--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "7.1.0",
+    "com.unity.2d.animation": "7.1.1",
     "com.unity.2d.psdimporter": "6.0.9",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "2.2.7",
-    "com.unity.cinemachine": "2.8.9",
+    "com.unity.cinemachine": "2.10.1",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "12.1.14",
+    "com.unity.textmeshpro": "3.0.9",
+    "com.unity.ugui": "1.0.0",
+    "net.slothsoft.unity-extensions": "3.1.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.director": "1.0.0",
@@ -20,11 +24,7 @@
     "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.ui": "1.0.0",
     "com.unity.modules.uielements": "1.0.0",
-    "com.unity.modules.umbra": "1.0.0",
-    "com.unity.render-pipelines.universal": "12.1.14",
-    "com.unity.textmeshpro": "3.0.7",
-    "com.unity.ugui": "1.0.0",
-    "net.slothsoft.unity-extensions": "3.1.0"
+    "com.unity.modules.umbra": "1.0.0"
   },
   "scopedRegistries": [
     {
